fix tests take 2